[gd_scene load_steps=23 format=3 uid="uid://bf1f5117fhyd2"]

[ext_resource type="Script" path="res://scene/car/car_panel.gd" id="1_ose0a"]
[ext_resource type="PackedScene" uid="uid://i0goedbwsro6" path="res://scene/player/ui/attribute_indicator.tscn" id="1_sbnje"]
[ext_resource type="Theme" uid="uid://co40pijjc7hbw" path="res://style/roadRogue.tres" id="2_62tb0"]
[ext_resource type="Texture2D" uid="uid://bkuq51cmhuj4l" path="res://texture/icon/speedometer.png" id="3_m6fwl"]
[ext_resource type="Texture2D" uid="uid://b3g3a2usedskp" path="res://texture/icon/steering.png" id="5_h3pqn"]
[ext_resource type="Texture2D" uid="uid://b40eqkba0jho8" path="res://texture/icon/engine.png" id="6_i8q0m"]
[ext_resource type="Texture2D" uid="uid://b282uef7te4fk" path="res://texture/icon/wheel.png" id="7_y38vu"]
[ext_resource type="Texture2D" uid="uid://ckvii7iuglgha" path="res://texture/icon/shield.png" id="8_sqmqh"]
[ext_resource type="Texture2D" uid="uid://dwin6ujqoo570" path="res://texture/icon/oil.png" id="10_vjw6w"]
[ext_resource type="Texture2D" uid="uid://bwlwtwutv2vx1" path="res://texture/icon/gas.png" id="11_sb4te"]
[ext_resource type="PackedScene" uid="uid://bepxjqhida0n8" path="res://scene/player/ui/roadButton.tscn" id="11_v8b53"]
[ext_resource type="Texture2D" uid="uid://clojw36svyluh" path="res://texture/icon/headlight.png" id="11_wfrgp"]
[ext_resource type="Material" uid="uid://d4nw1uchte7mv" path="res://scene/player/menu/main/3dText_Common.tres" id="12_ib4fu"]
[ext_resource type="Texture2D" uid="uid://cdchffiu3n8tp" path="res://texture/icon/clover.png" id="12_m7voe"]
[ext_resource type="Texture2D" uid="uid://dw45xqq8in4ce" path="res://texture/icon/luck.png" id="13_k236w"]
[ext_resource type="Shader" path="res://shader/3dtext.gdshader" id="13_re0hq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ei1gt"]
content_margin_left = 20.0
content_margin_right = 20.0
bg_color = Color(0.92549, 0.603922, 0.160784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.658824, 0.12549, 0.101961, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 200
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ydy1a"]
bg_color = Color(0.92549, 0.603922, 0.160784, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.658824, 0.12549, 0.101961, 1)
corner_radius_top_right = 50
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gi0ic"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oqre2"]
bg_color = Color(0.658824, 0.12549, 0.101961, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0mfgd"]
bg_color = Color(0.0588235, 0.545098, 0.552941, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h42ye"]
resource_local_to_scene = true
shader = ExtResource("13_re0hq")
shader_parameter/angle = 0.6
shader_parameter/thickness = 5.0
shader_parameter/scale = 1.0
shader_parameter/shear = Vector2(0, -0.2)
shader_parameter/slices = 16
shader_parameter/outline = true
shader_parameter/outline_width = 2.0
shader_parameter/show_bound = false

[node name="carPanel" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
z_index = 2
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ei1gt")
script = ExtResource("1_ose0a")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
offset_left = 202.0
offset_top = 57.0
offset_right = 349.0
offset_bottom = 111.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ydy1a")

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -166.0
offset_top = 12.0
offset_right = 17.0
offset_bottom = 64.0
grow_horizontal = 0

[node name="speed" type="Label" parent="Panel/HBoxContainer2"]
material = ExtResource("12_ib4fu")
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_62tb0")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 40
text = "27 MPH"

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer2"]
visible = false
custom_minimum_size = Vector2(30, 20)
layout_mode = 2
texture = ExtResource("3_m6fwl")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
offset_right = 200.0
offset_bottom = 21.4

[node name="Panel" type="CanvasLayer" parent="VBoxContainer"]
layer = 128

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel" groups=["visibleWhenPaused"]]
visible = false
z_index = 99
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -313.0
offset_right = 155.0
offset_bottom = 323.0
grow_vertical = 2
theme_override_constants/separation = -4

[node name="attributeIndicator_engine" parent="VBoxContainer/Panel/HBoxContainer" groups=["engineui"] instance=ExtResource("1_sbnje")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_styles/normal = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gi0ic")
myIcon = ExtResource("6_i8q0m")

[node name="attributeIndicator_steering" parent="VBoxContainer/Panel/HBoxContainer" groups=["steeringui"] instance=ExtResource("1_sbnje")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_styles/normal = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gi0ic")
myIcon = ExtResource("5_h3pqn")

[node name="attributeIndicator_aero" parent="VBoxContainer/Panel/HBoxContainer" groups=["tractionui"] instance=ExtResource("1_sbnje")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_styles/normal = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gi0ic")
myIcon = ExtResource("7_y38vu")

[node name="attributeIndicator_armor" parent="VBoxContainer/Panel/HBoxContainer" groups=["armorui"] instance=ExtResource("1_sbnje")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_styles/normal = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gi0ic")
myIcon = ExtResource("8_sqmqh")

[node name="attributeIndicator_oil" parent="VBoxContainer/Panel/HBoxContainer" groups=["oilui"] instance=ExtResource("1_sbnje")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_styles/normal = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gi0ic")
myIcon = ExtResource("10_vjw6w")

[node name="attributeIndicator_headlights" parent="VBoxContainer/Panel/HBoxContainer" groups=["headlightsui"] instance=ExtResource("1_sbnje")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_styles/normal = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gi0ic")
myIcon = ExtResource("11_wfrgp")

[node name="attributeIndicator_clover" parent="VBoxContainer/Panel/HBoxContainer" groups=["cloverui"] instance=ExtResource("1_sbnje")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_styles/normal = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gi0ic")
myIcon = ExtResource("12_m7voe")

[node name="attributeIndicator_luck" parent="VBoxContainer/Panel/HBoxContainer" groups=["luckui"] instance=ExtResource("1_sbnje")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_styles/normal = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gi0ic")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gi0ic")
myIcon = ExtResource("13_k236w")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
offset_left = 185.0
offset_top = 6.0
offset_right = -120.0
offset_bottom = 36.0
size_flags_horizontal = 0

[node name="ProgressBar_Health" type="ProgressBar" parent="HBoxContainer" groups=["healthui"]]
custom_minimum_size = Vector2(350, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/fill = SubResource("StyleBoxFlat_oqre2")
value = 100.0
show_percentage = false

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
offset_left = 161.0
offset_top = 40.0
offset_right = -118.0
offset_bottom = 64.0

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer2" groups=["fuelui"]]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("11_sb4te")
expand_mode = 1

[node name="ProgressBar_Fuel" type="ProgressBar" parent="HBoxContainer2"]
custom_minimum_size = Vector2(100, 15)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/fill = SubResource("StyleBoxFlat_0mfgd")
value = 100.0
show_percentage = false

[node name="pauseButton" parent="." instance=ExtResource("11_v8b53")]
material = SubResource("ShaderMaterial_h42ye")
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -3.0
offset_top = -3.0
offset_right = 154.0
offset_bottom = 62.0
grow_horizontal = 1
grow_vertical = 1
theme_override_font_sizes/font_size = 20
text = "GOONCRUSHER"

[connection signal="pressed" from="pauseButton" to="." method="_on_pause_button_pressed"]
